src/main/gen/dev/qilletni/intellij/parser/QilletniParser.java
// This is a generated file. Not intended for manual editing.
package dev.qilletni.intellij.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static dev.qilletni.intellij.psi.QilletniTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class QilletniParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  /* ********************************************************** */
  // multiplicative_expr ((PLUS|MINUS) multiplicative_expr)*
  public static boolean additive_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITIVE_EXPR, "<additive expr>");
    r = multiplicative_expr(b, l + 1);
    r = r && additive_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ((PLUS|MINUS) multiplicative_expr)*
  private static boolean additive_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!additive_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "additive_expr_1", c)) break;
    }
    return true;
  }

  // (PLUS|MINUS) multiplicative_expr
  private static boolean additive_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = additive_expr_1_0_0(b, l + 1);
    r = r && multiplicative_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // PLUS|MINUS
  private static boolean additive_expr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expr_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    return r;
  }

  /* ********************************************************** */
  // album_url_or_name_pair | STRING
  public static boolean album_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "album_expr")) return false;
    if (!nextTokenIs(b, STRING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = album_url_or_name_pair(b, l + 1);
    if (!r) r = consumeToken(b, STRING);
    exit_section_(b, m, ALBUM_EXPR, r);
    return r;
  }

  /* ********************************************************** */
  // STRING ALBUM_TYPE BY STRING
  public static boolean album_url_or_name_pair(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "album_url_or_name_pair")) return false;
    if (!nextTokenIs(b, STRING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, STRING, ALBUM_TYPE, BY, STRING);
    exit_section_(b, m, ALBUM_URL_OR_NAME_PAIR, r);
    return r;
  }

  /* ********************************************************** */
  // asmt_base (DOUBLE_DOT ID ASSIGN expr)*
  public static boolean asmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASMT, "<asmt>");
    r = asmt_base(b, l + 1);
    r = r && asmt_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (DOUBLE_DOT ID ASSIGN expr)*
  private static boolean asmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmt_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!asmt_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "asmt_1", c)) break;
    }
    return true;
  }

  // DOUBLE_DOT ID ASSIGN expr
  private static boolean asmt_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmt_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOUBLE_DOT, ID, ASSIGN);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // var_declaration
  //   | ID LEFT_SBRACKET int_expr RIGHT_SBRACKET ASSIGN expr
  //   | ID ASSIGN expr
  //   | lhs_member ASSIGN expr
  //   | lhs_core DOUBLE_DOT ID ASSIGN expr
  public static boolean asmt_base(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmt_base")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASMT_BASE, "<asmt base>");
    r = var_declaration(b, l + 1);
    if (!r) r = asmt_base_1(b, l + 1);
    if (!r) r = asmt_base_2(b, l + 1);
    if (!r) r = asmt_base_3(b, l + 1);
    if (!r) r = asmt_base_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ID LEFT_SBRACKET int_expr RIGHT_SBRACKET ASSIGN expr
  private static boolean asmt_base_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmt_base_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, LEFT_SBRACKET);
    r = r && int_expr(b, l + 1);
    r = r && consumeTokens(b, 0, RIGHT_SBRACKET, ASSIGN);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ID ASSIGN expr
  private static boolean asmt_base_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmt_base_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, ASSIGN);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // lhs_member ASSIGN expr
  private static boolean asmt_base_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmt_base_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = lhs_member(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // lhs_core DOUBLE_DOT ID ASSIGN expr
  private static boolean asmt_base_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmt_base_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = lhs_core(b, l + 1);
    r = r && consumeTokens(b, 0, DOUBLE_DOT, ID, ASSIGN);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // body_stmt* return_stmt?
  public static boolean body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "body")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BODY, "<body>");
    r = body_0(b, l + 1);
    r = r && body_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // body_stmt*
  private static boolean body_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "body_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!body_stmt(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "body_0", c)) break;
    }
    return true;
  }

  // return_stmt?
  private static boolean body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "body_1")) return false;
    return_stmt(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // if_stmt | for_stmt | stmt | expr | LINE_COMMENT | BLOCK_COMMENT | DOC_COMMENT
  public static boolean body_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "body_stmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BODY_STMT, "<body stmt>");
    r = if_stmt(b, l + 1);
    if (!r) r = for_stmt(b, l + 1);
    if (!r) r = stmt(b, l + 1);
    if (!r) r = expr(b, l + 1);
    if (!r) r = consumeToken(b, LINE_COMMENT);
    if (!r) r = consumeToken(b, BLOCK_COMMENT);
    if (!r) r = consumeToken(b, DOC_COMMENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // collection_url_or_name_pair order_define? weights_define?
  //                   | COLLECTION_TYPE LEFT_PAREN list_expression RIGHT_PAREN order_define? weights_define?
  //                   | STRING
  public static boolean collection_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collection_expr")) return false;
    if (!nextTokenIs(b, "<collection expr>", COLLECTION_TYPE, STRING)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLLECTION_EXPR, "<collection expr>");
    r = collection_expr_0(b, l + 1);
    if (!r) r = collection_expr_1(b, l + 1);
    if (!r) r = consumeToken(b, STRING);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // collection_url_or_name_pair order_define? weights_define?
  private static boolean collection_expr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collection_expr_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = collection_url_or_name_pair(b, l + 1);
    r = r && collection_expr_0_1(b, l + 1);
    r = r && collection_expr_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // order_define?
  private static boolean collection_expr_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collection_expr_0_1")) return false;
    order_define(b, l + 1);
    return true;
  }

  // weights_define?
  private static boolean collection_expr_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collection_expr_0_2")) return false;
    weights_define(b, l + 1);
    return true;
  }

  // COLLECTION_TYPE LEFT_PAREN list_expression RIGHT_PAREN order_define? weights_define?
  private static boolean collection_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collection_expr_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COLLECTION_TYPE, LEFT_PAREN);
    r = r && list_expression(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    r = r && collection_expr_1_4(b, l + 1);
    r = r && collection_expr_1_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // order_define?
  private static boolean collection_expr_1_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collection_expr_1_4")) return false;
    order_define(b, l + 1);
    return true;
  }

  // weights_define?
  private static boolean collection_expr_1_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collection_expr_1_5")) return false;
    weights_define(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LIMIT_PARAM LEFT_SBRACKET limit_amount RIGHT_SBRACKET
  public static boolean collection_limit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collection_limit")) return false;
    if (!nextTokenIs(b, LIMIT_PARAM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LIMIT_PARAM, LEFT_SBRACKET);
    r = r && limit_amount(b, l + 1);
    r = r && consumeToken(b, RIGHT_SBRACKET);
    exit_section_(b, m, COLLECTION_LIMIT, r);
    return r;
  }

  /* ********************************************************** */
  // STRING COLLECTION_TYPE BY STRING
  public static boolean collection_url_or_name_pair(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collection_url_or_name_pair")) return false;
    if (!nextTokenIs(b, STRING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, STRING, COLLECTION_TYPE, BY, STRING);
    exit_section_(b, m, COLLECTION_URL_OR_NAME_PAIR, r);
    return r;
  }

  /* ********************************************************** */
  // ID
  public static boolean constructor_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_name")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, CONSTRUCTOR_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // DOUBLE | DOUBLE_TYPE LEFT_PAREN expr RIGHT_PAREN
  public static boolean double_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "double_expr")) return false;
    if (!nextTokenIs(b, "<double expr>", DOUBLE, DOUBLE_TYPE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOUBLE_EXPR, "<double expr>");
    r = consumeToken(b, DOUBLE);
    if (!r) r = double_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // DOUBLE_TYPE LEFT_PAREN expr RIGHT_PAREN
  private static boolean double_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "double_expr_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOUBLE_TYPE, LEFT_PAREN);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ELSE_KEYWORD LEFT_CBRACKET body RIGHT_CBRACKET
  public static boolean else_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_body")) return false;
    if (!nextTokenIs(b, ELSE_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ELSE_KEYWORD, LEFT_CBRACKET);
    r = r && body(b, l + 1);
    r = r && consumeToken(b, RIGHT_CBRACKET);
    exit_section_(b, m, ELSE_BODY, r);
    return r;
  }

  /* ********************************************************** */
  // ELSE_KEYWORD IF_KEYWORD LEFT_PAREN expr RIGHT_PAREN LEFT_CBRACKET body RIGHT_CBRACKET
  public static boolean elseif_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseif_list")) return false;
    if (!nextTokenIs(b, ELSE_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ELSE_KEYWORD, IF_KEYWORD, LEFT_PAREN);
    r = r && expr(b, l + 1);
    r = r && consumeTokens(b, 0, RIGHT_PAREN, LEFT_CBRACKET);
    r = r && body(b, l + 1);
    r = r && consumeToken(b, RIGHT_CBRACKET);
    exit_section_(b, m, ELSEIF_LIST, r);
    return r;
  }

  /* ********************************************************** */
  // entity_property_declaration* entity_constructor? function_def*
  public static boolean entity_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_body")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENTITY_BODY, "<entity body>");
    r = entity_body_0(b, l + 1);
    r = r && entity_body_1(b, l + 1);
    r = r && entity_body_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // entity_property_declaration*
  private static boolean entity_body_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_body_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!entity_property_declaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "entity_body_0", c)) break;
    }
    return true;
  }

  // entity_constructor?
  private static boolean entity_body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_body_1")) return false;
    entity_constructor(b, l + 1);
    return true;
  }

  // function_def*
  private static boolean entity_body_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_body_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!function_def(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "entity_body_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // DOC_COMMENT? constructor_name LEFT_PAREN function_def_params RIGHT_PAREN
  public static boolean entity_constructor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_constructor")) return false;
    if (!nextTokenIs(b, "<entity constructor>", DOC_COMMENT, ID)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENTITY_CONSTRUCTOR, "<entity constructor>");
    r = entity_constructor_0(b, l + 1);
    r = r && constructor_name(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && function_def_params(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // DOC_COMMENT?
  private static boolean entity_constructor_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_constructor_0")) return false;
    consumeToken(b, DOC_COMMENT);
    return true;
  }

  /* ********************************************************** */
  // DOC_COMMENT? ENTITY entity_name LEFT_CBRACKET entity_body RIGHT_CBRACKET
  public static boolean entity_def(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_def")) return false;
    if (!nextTokenIs(b, "<entity def>", DOC_COMMENT, ENTITY)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENTITY_DEF, "<entity def>");
    r = entity_def_0(b, l + 1);
    r = r && consumeToken(b, ENTITY);
    r = r && entity_name(b, l + 1);
    r = r && consumeToken(b, LEFT_CBRACKET);
    r = r && entity_body(b, l + 1);
    r = r && consumeToken(b, RIGHT_CBRACKET);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // DOC_COMMENT?
  private static boolean entity_def_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_def_0")) return false;
    consumeToken(b, DOC_COMMENT);
    return true;
  }

  /* ********************************************************** */
  // NEW ID LEFT_PAREN expr_list? RIGHT_PAREN
  public static boolean entity_initialize(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_initialize")) return false;
    if (!nextTokenIs(b, NEW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, NEW, ID, LEFT_PAREN);
    r = r && entity_initialize_3(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, ENTITY_INITIALIZE, r);
    return r;
  }

  // expr_list?
  private static boolean entity_initialize_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_initialize_3")) return false;
    expr_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ID
  public static boolean entity_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_name")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, ENTITY_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // DOC_COMMENT?
  //                                 (ANY_TYPE|INT_TYPE|DOUBLE_TYPE|STRING_TYPE|BOOLEAN_TYPE|COLLECTION_TYPE|SONG_TYPE|WEIGHTS_KEYWORD|ALBUM_TYPE|JAVA_TYPE|ID)
  //                                 (LEFT_SBRACKET RIGHT_SBRACKET)? property_name (ASSIGN expr)?
  public static boolean entity_property_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_property_declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENTITY_PROPERTY_DECLARATION, "<entity property declaration>");
    r = entity_property_declaration_0(b, l + 1);
    r = r && entity_property_declaration_1(b, l + 1);
    r = r && entity_property_declaration_2(b, l + 1);
    r = r && property_name(b, l + 1);
    r = r && entity_property_declaration_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // DOC_COMMENT?
  private static boolean entity_property_declaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_property_declaration_0")) return false;
    consumeToken(b, DOC_COMMENT);
    return true;
  }
